#2444 Get all entities instead of stream.